update profile image

--- a/song.html
+++ b/song.html
@@ -60,7 +60,7 @@
 
             <div id="header-user-menu">
                 <div href="#" class="user-profile-img" onclick="myFunction()">
-                    <img class="ii" src="assets/images/profile-pic.png" alt="user profile image" style="width: 40px; border-radius:50%;">
+                    <img class="ii" src="assets/images/chill.jpg" alt="user profile image" style="width: 40px; border-radius:50%;">
                 </div>
 
                 <div class="user-profile-menu display-none">
